# tree-mapper

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
storage/: docker-compose.yml  generator.py  tree.json
storage/test-data/B/level_3/level_4/: file_level_4.txt
storage/test-data/B/level_3/level_4/level_5/: file_level_5.txt
storage/test-data/B/level_3/level_4/level_5/level_6/: file_level_6.txt
